--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -11,3 +11,4 @@ editor_options:
 Welcome to my research website.
 
 * [Theoretical_community_ecology_homework1](TCE_HW1.html)
+* [Theoretical_community_ecology_homework4](TCE_HW4.html)
