--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,3 +13,4 @@ Welcome to my research website.
 * [Theoretical_community_ecology_homework1](TCE_HW1.html)
 * [Theoretical_community_ecology_homework4](TCE_HW4.html)
 * [Theoretical_community_ecology_homework5](TCE_HW5.html)
+* [Theoretical_community_ecology_homework7_replicator_and_game_theory](TCE_HW7.html)
